--- a/Resources/Styles/TextBoxStyles.xaml
+++ b/Resources/Styles/TextBoxStyles.xaml
@@ -166,7 +166,7 @@
 
     <Style x:Key="CleanTextAreaStyle" TargetType="TextBox">
         <Setter Property="Background" Value="{StaticResource SecondaryButtonBrush}"/>
-        <Setter Property="Height" Value="60"/>
+        <Setter Property="Height" Value="80"/>
         <Setter Property="FontFamily" Value="SF Pro Display"/>
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="Padding" Value="6 4"/>
@@ -182,12 +182,13 @@
             <Setter.Value>
                 <ControlTemplate TargetType="TextBox">
                     <Border x:Name="TextAreaBorder"
-                    Background="{TemplateBinding Background}"
-                    BorderBrush="{TemplateBinding BorderBrush}"
-                    BorderThickness="{TemplateBinding BorderThickness}"
-                    CornerRadius="12"
-                    Padding="5">
-                        <ScrollViewer x:Name="PART_ContentHost"/>
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            CornerRadius="12"
+                            Padding="8">
+                        <ScrollViewer x:Name="PART_ContentHost"
+                                      Style="{StaticResource ScrollViewerStyle}"/>
                     </Border>
 
                     <ControlTemplate.Triggers>
