--- a/Views/RecipesModule/RecipeStepControl.xaml
+++ b/Views/RecipesModule/RecipeStepControl.xaml
@@ -4,9 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             Height="Auto" Width="300">
+             Height="Auto" Width="Auto" >
 
-    <Grid HorizontalAlignment="Stretch" Margin="0,10,0,10">
+    <Grid HorizontalAlignment="Stretch" Margin="0 10 0 10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="8*"/>
@@ -16,8 +16,9 @@
         <TextBlock x:Name="StepNumberText" 
                    Text="{Binding StepNumber, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0}.}"
                    Style="{StaticResource SubtitleLabelStyle}"
-                   FontSize="14"
-                   Margin="20,5,10,0"/>
+                   FontSize="13"
+                   TextAlignment="Left"
+                   Margin="20,8,10,0"/>
 
         <TextBox Grid.Column="1"
                  Text="{Binding Instruction, RelativeSource={RelativeSource AncestorType=UserControl}, UpdateSourceTrigger=PropertyChanged}"
