--- a/Views/RecipesModule/RecipesPage.xaml
+++ b/Views/RecipesModule/RecipesPage.xaml
@@ -3,135 +3,74 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:ItaliaPizzaClient.Views.RecepiesModule"
+      xmlns:local="clr-namespace:ItaliaPizzaClient.Views"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="RecipesPage">
+      Title="RegisterSupplierOrdersPage">
 
     <Grid Background="{StaticResource BackgroundBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="68"/>
+            <RowDefinition Height="70"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Border Grid.Row="0" BorderThickness="0, 0, 0, 0.5" BorderBrush="{StaticResource SecondaryBrush}">
+        <Border Grid.Row="0" BorderThickness="0 0 0 1"
+                BorderBrush="{StaticResource BorderBrush}">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="6*"/>
-                    <ColumnDefinition Width="4*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-                <StackPanel Grid.Column="0" Orientation="Vertical" Margin="20, 0, 0, 10"
-                            HorizontalAlignment="Left" VerticalAlignment="Bottom">
-                    <TextBlock Style="{StaticResource HeaderLabelStyle}" Text="{DynamicResource Recipes_Header}"/>
-                    <TextBlock Style="{StaticResource DescriptionLabelStyle}" Text="{DynamicResource Recipes_Desc}"/>
-                </StackPanel>
-
-                <StackPanel Grid.Column="1" Orientation="Vertical" Margin="20, 0, 0, 10"
-                            HorizontalAlignment="Left" VerticalAlignment="Bottom">
-                    <Button x:Name="BtnNewRecipe" Style="{DynamicResource PrimaryButtonStyle}"
-                            Content="{DynamicResource Recipes_BtnAddRecipe}" Click="Clic_BtnNewRecipe">
-                        <Button.Tag>/Resources/Icons/add-icon.png</Button.Tag>
-                    </Button>
+                <StackPanel Grid.Column="0" Orientation="Vertical" Margin="20,0,0,10" 
+                    HorizontalAlignment="Left" VerticalAlignment="Bottom">
+                    <TextBlock x:Name="PageHeader" 
+                               Style="{StaticResource HeaderLabelStyle}"
+                               Text="{DynamicResource Recipes_Header}" />
+                    <TextBlock x:Name="PageDescription"
+                               Style="{StaticResource DescriptionLabelStyle}"
+                               Text="{DynamicResource Recipes_Desc}"/>
                 </StackPanel>
             </Grid>
         </Border>
 
-        <Border Grid.Row="1">
-            <Grid>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3.5*"/>
+                <ColumnDefinition Width="6.5*"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid Grid.Column="0">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="42"/>
+                    <RowDefinition Height="36"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <Border Grid.Row="0" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0, 0, 0, 0.5">
-                    <Grid Margin="20, 0" VerticalAlignment="Center">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-
-                        <TextBox Grid.Column="0" HorizontalAlignment="Left"
-                                 Style="{DynamicResource SecondarySearchBoxStyle}"
-                                 Width="180"/>
-                    </Grid>
-                </Border>
-
-                <Grid Grid.Row="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="300"/>
-                    </Grid.ColumnDefinitions>
-
-                    <Grid Grid.Column="0">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="40"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-
-                        <StackPanel Grid.Row="0" VerticalAlignment="Bottom" Margin="20, 4">
-                            <TextBlock Text="{DynamicResource Recipes_TitleTable}"
-                                       Style="{DynamicResource SubtitleLabelStyle}"/>
-                        </StackPanel>
-                        
-                        <!-- Tabla de recetas -->
-                        <Border Grid.Row="1" Padding="8">
-                            <DataGrid RowStyle="{DynamicResource DataGridRowStyle1}"
-                                      ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}"
-                                      CellStyle="{DynamicResource DataGridCellStyle1}"
-                                      x:Name="recipesDataGrid" Style="{DynamicResource DataGridStyle1}" AutoGenerateColumns="False"
-                                      SelectionChanged="recipesDataGrid_SelectionChanged">
-                                <DataGrid.Columns>
-                                    <!-- Número -->
-                                    <DataGridTextColumn Header="Tiempo preparacion" Binding="{Binding PreparationTime}" IsReadOnly="True" Width="0.5*"/>
-
-                                    <!-- Titulo -->
-                                    <DataGridTextColumn Header="Titulo" Binding="{Binding Description}" IsReadOnly="True" Width="*"/>
-                                </DataGrid.Columns>
-                            </DataGrid>
-                        </Border>
-                    </Grid>
-
-                    <Border Grid.Column="1" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0.5, 0, 0, 0">
-                        <Grid Grid.Row="0" x:Name="RecipeDetailsPanel" >
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="auto"/>
-                            </Grid.RowDefinitions>
-
-
-                            <StackPanel VerticalAlignment="Center" Grid.Row="0" Orientation="Vertical" Margin="24, 10">
-                                <TextBlock x:Name="ProductRecipeTitle" Text="Pizza de pepperoni"
-                                    Style="{DynamicResource SubtitleLabelStyle}"/>
-                                <TextBlock x:Name="RecipeDescription" Text="Ejemplo de descripcion e ingredientes..." 
-                                    Margin="0, 10"
-                                    TextWrapping="Wrap"
-                                    Style="{DynamicResource DescriptionLabelStyle}"/>
-                                <TextBlock x:Name="RecipePreparationTime"
-                                    Margin="0,10"
-                                    TextWrapping="Wrap"
-                                    Style="{DynamicResource SubtitleLabelStyle}">
-                                    <Run FontFamily="Segoe MDL2 Assets" Text="&#xE823;" />
-                                    <Run Text=" 140 minutos" />
-                                </TextBlock>
-                            </StackPanel>
-
-                            <Border Grid.Row="2" BorderBrush="{DynamicResource SecondaryBrush}"
-                                        BorderThickness="0 0.5 0 0">
-                                <StackPanel VerticalAlignment="Center" Margin="20">
-                                    <Button x:Name="BtnShowRecipe" 
-                                                Style="{DynamicResource PrimaryButtonStyle}"
-                                                Content="Mostrar receta completa" Margin="0 0 0 6" 
-                                                Click="Click_BtnShowRecipe">
-                                        <Button.Tag>/Resources/Icons/edit-icon.png</Button.Tag>
-                                    </Button>
-                                </StackPanel>
-                            </Border>
-                        </Grid>
-                    </Border>
-                </Grid>
+                <ScrollViewer Grid.Row="1"
+                              VerticalScrollBarVisibility="Auto"
+                              HorizontalScrollBarVisibility="Disabled"
+                              Padding="10"
+                              Style="{StaticResource ScrollViewerStyle}">
+                    <StackPanel x:Name="ProductsContainer"/>
+                </ScrollViewer>
             </Grid>
-        </Border>
+
+            <Border Grid.Column="1" 
+                    BorderBrush="{DynamicResource BorderBrush}" 
+                    BorderThickness="1 0 0 0" >
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="36"/>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                </Grid>
+            </Border>
+
+
+        </Grid>
+
         
     </Grid>
 </Page>
