--- a/Views/RecipesModule/RegisterRecipePage.xaml
+++ b/Views/RecipesModule/RegisterRecipePage.xaml
@@ -44,78 +44,101 @@
             <Border Grid.Column="0" 
                     BorderBrush="{DynamicResource BorderBrush}" 
                     BorderThickness="0 0 1 0">
-                <StackPanel>
-                    <StackPanel Grid.Row="0" Margin="20 16 20 20" 
-                                Orientation="Vertical"
-                                VerticalAlignment="Bottom">
-                        <TextBlock x:Name="ProductName"
-                                   Style="{DynamicResource SubtitleLabelStyle}"/>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock x:Name="ProductCategory"
-                                       Style="{DynamicResource RegularLabelStyle}"/>
-                            <TextBlock x:Name="ProductCode"
-                                       Style="{DynamicResource DescriptionLabelStyle}"/>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+
+                    <StackPanel Grid.Row="0">
+                        <StackPanel Grid.Row="0" 
+                                    Margin="20 16"
+                                    Orientation="Vertical"
+                                    VerticalAlignment="Bottom">
+                            <TextBlock x:Name="ProductName"
+                                       Style="{DynamicResource SubtitleLabelStyle}"/>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock x:Name="ProductCategory"
+                                           Style="{DynamicResource RegularLabelStyle}"/>
+                                <TextBlock x:Name="ProductCode"
+                                           Style="{DynamicResource DescriptionLabelStyle}"/>
+                            </StackPanel>
                         </StackPanel>
+
+                        <Grid Margin="20 0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <Image Name="ProductPic"
+                                   Grid.Column="0"
+                                   HorizontalAlignment="Left"
+                                   Width="70" Height="70" 
+                                   Stretch="Fill"
+                                   Source="/Resources/Images/default-product-pic.png"
+                                   VerticalAlignment="Center"
+                                   RenderOptions.BitmapScalingMode="HighQuality">
+                                <Image.Clip>
+                                    <RectangleGeometry Rect="0 0 70 70" RadiusX="12" RadiusY="12"/>
+                                </Image.Clip>
+                            </Image>
+
+                            <StackPanel Grid.Column="1"
+                                        Margin="10 6 0 10">
+                                <TextBlock Style="{DynamicResource RegularLabelStyle}"
+                                           Text="{DynamicResource Glb_Description}"
+                                           FontSize="10" FontFamily="{StaticResource SFProSemiBold}"/>
+                                <TextBlock x:Name="ProductDescription"
+                                           Style="{DynamicResource DescriptionLabelStyle}"
+                                           TextWrapping="Wrap" 
+                                           HorizontalAlignment="Stretch"/>
+                            </StackPanel>
+                        </Grid>
                     </StackPanel>
 
-                    <Grid Margin="20 0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-
-                        <Image Name="ProductPic"
-                               Grid.Column="0"
-                               HorizontalAlignment="Left"
-                               Width="70" Height="70" 
-                               Stretch="Fill"
-                               Source="/Resources/Images/default-product-pic.png"
-                               VerticalAlignment="Center"
-                               RenderOptions.BitmapScalingMode="HighQuality" >
-                            <Image.Clip>
-                                <RectangleGeometry Rect="0 0 70 70" RadiusX="12" RadiusY="12"/>
-                            </Image.Clip>
-                        </Image>
-
-                        <TextBlock x:Name="ProductDescription"
-                                   Grid.Column="1"
-                                   Margin="10 0 0 0"
-                                   Style="{DynamicResource DescriptionLabelStyle}"
-                                   TextWrapping="Wrap" 
-                                   HorizontalAlignment="Stretch"/>
-                    </Grid>
-                    
-                    <Grid>
+                    <Grid Grid.Row="1">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
-                        <Grid Margin="20 10">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
+                        <Border BorderBrush="{StaticResource BorderBrush}"
+                                BorderThickness="0 0 0 1" Margin="20 0">
+                            <Grid Margin="0 14">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
 
-                            <TextBlock Text="{DynamicResource RegRecipe_PreparationSteps}"
-                                       Style="{DynamicResource DescriptionLabelStyle}"
-                                       VerticalAlignment="Center"/>
-                            <Button x:Name="BtnAddIngredient"
-                                    Grid.Column="2"
-                                    Style="{DynamicResource PrimaryButtonStyle}"
-                                    Content="{DynamicResource RegRecipe_BtnAddStep}"
-                                    Click="Click_BtnAddIngredient">
-                                <Button.Tag>/Resources/Icons/add-icon.png</Button.Tag>
-                            </Button>
-                        </Grid>
+                                <TextBlock Text="{DynamicResource RegRecipe_Ingredients}"
+                                           Style="{DynamicResource DescriptionLabelStyle}"
+                                           VerticalAlignment="Center"/>
+                                <Button x:Name="BtnAddIngredient"
+                                        Grid.Column="2"
+                                        Style="{DynamicResource PrimaryButtonStyle}"
+                                        Content="{DynamicResource RegRecipe_BtnAddIngredient}"
+                                        Click="Click_BtnAddIngredient">
+                                    <Button.Tag>/Resources/Icons/add-icon.png</Button.Tag>
+                                </Button>
+                            </Grid>
+                        </Border>
 
                         <ScrollViewer Grid.Row="1"
                                       VerticalScrollBarVisibility="Auto"
-                                      Style="{StaticResource ScrollViewerStyle}" >
-                            <StackPanel x:Name="IngredientsContainer" Margin="20 0"/>
+                                      HorizontalScrollBarVisibility="Disabled"
+                                      Style="{StaticResource ScrollViewerStyle}">
+                            <ItemsControl x:Name="IngredientsContainer">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <StackPanel Orientation="Vertical"
+                                                    Margin="20 0"/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                            </ItemsControl>
                         </ScrollViewer>
                     </Grid>
-                </StackPanel>
+                </Grid>
             </Border>
 
             <Grid Grid.Column="1">
@@ -167,20 +190,18 @@
                 <Border Grid.Row="2"
                         BorderBrush="{StaticResource BorderBrush}"
                         BorderThickness="0 1 0 0">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="7*" MaxWidth="640"/>
-                            <ColumnDefinition Width="*" MinWidth="0"/>
-                        </Grid.ColumnDefinitions>
-
-                        <!-- Wrap StepsContainer in ScrollViewer -->
-                        <ScrollViewer Grid.Column="0"
-                                      VerticalScrollBarVisibility="Auto"
-                                      HorizontalScrollBarVisibility="Disabled">
-                            <StackPanel x:Name="StepsContainer">
-                            </StackPanel>
-                        </ScrollViewer>
-                    </Grid>
+                    <ScrollViewer Grid.Column="0"
+                                  VerticalScrollBarVisibility="Auto"
+                                  HorizontalScrollBarVisibility="Disabled"
+                                  Style="{StaticResource ScrollViewerStyle}">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="7*" MaxWidth="640"/>
+                                <ColumnDefinition Width="*" MinWidth="0"/>
+                            </Grid.ColumnDefinitions>
+                            <StackPanel x:Name="StepsContainer"/>
+                        </Grid>
+                    </ScrollViewer>
                 </Border>
             </Grid>
 
