--- a/Views/UserControls/SelectSupply.xaml
+++ b/Views/UserControls/SelectSupply.xaml
@@ -19,7 +19,7 @@
                     BorderBrush="{StaticResource BorderBrush}"
                     BorderThickness="0 0 0 1">
                 <StackPanel Margin="20 15">
-                    <TextBlock Text="Seleccionar Insumos"
+                    <TextBlock Text="{DynamicResource RegRecipe_DialogTSelectSupply}"
                                Style="{StaticResource SubtitleLabelStyle}"/>
                     <TextBox x:Name="TbSearch" 
                              Margin="0 10 0 0"
